chart_deps/fluent/fluentbit/fluentbit: non operated chart

--- a/charts/chart_deps/app/common/templates/clusterrole.yaml
+++ b/charts/chart_deps/app/common/templates/clusterrole.yaml
@@ -1,1 +1,2 @@
-{{- include "core.clusterrole" (list . (include "common.labels" .) .Values.clusterRole )}}
+{{- $labels := include "common.labels" $ | fromYaml }}
+{{- include "core.clusterrole" (list . $labels  .Values.clusterRole )}}
