--- a/charts/chart_deps/app/common/templates/additionalservices.yaml
+++ b/charts/chart_deps/app/common/templates/additionalservices.yaml
@@ -1,7 +1,8 @@
 {{- range $service := .Values.additionalServices }}
+{{- $labels := include "common.labels" $ | fromYaml }}
 {{- if not $service.selectorLabels }}
 {{- $selectorLabels := include "common.selectorLabels" $ | fromYaml }}
 {{- $service := set $service "selectorLabels" $selectorLabels }}
 {{- end }}
-{{- include "core.service" (list $ (include "common.labels" $) $service )}}
+{{- include "core.service" (list $ $labels $service )}}
 {{- end }}
