--- a/charts/chart_deps/app/common/templates/service.yaml
+++ b/charts/chart_deps/app/common/templates/service.yaml
@@ -1,6 +1,7 @@
 {{- $service := mustDeepCopy .Values.service }}
+{{- $labels := include "common.labels" $ | fromYaml }}
 {{- if not $service.selectorLabels }}
 {{- $selectorLabels := include "common.selectorLabels" . | fromYaml }}
 {{- $service := set $service "selectorLabels" $selectorLabels }}
 {{- end }}
-{{- include "core.service" (list . (include "common.labels" .) $service )}}
+{{- include "core.service" (list . $labels $service )}}
