--- a/charts/chart_deps/app/common/templates/serviceaccount.yaml
+++ b/charts/chart_deps/app/common/templates/serviceaccount.yaml
@@ -1,3 +1,4 @@
+{{- $labels := include "common.labels" $ | fromYaml }}
 {{- $serviceAccount := mustDeepCopy .Values.serviceAccount }}
 {{- $serviceAccount := set $serviceAccount "name" (include "common.serviceAccountName" .) }}
-{{- include "core.serviceAccount" (list . (include "common.labels" .) $serviceAccount )}}
+{{- include "core.serviceAccount" (list . $labels $serviceAccount )}}
