--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 charts/**/charts
 !charts/chart_deps/app/common/charts
 !charts/chart_deps/fluent/fluentbit/fluentbit-operated/charts
+!charts/chart_deps/fluent/fluentbit/fluentbit-standalone/charts
