--- a/charts/fluent/values.yaml
+++ b/charts/fluent/values.yaml
@@ -309,7 +309,7 @@ fluentbit:
           - list
 
 fluentbit-gcp:
-  enabled: true
+  enabled: false
   inputs:
     control-plane:
       name: tail
