chart_desp/app/common: fix typo

--- a/charts/chart_deps/app/common/values.yaml
+++ b/charts/chart_deps/app/common/values.yaml
@@ -25,7 +25,7 @@ volumeClaimTemplates: {}
 volumes: {}
 volumeMounts: {}
 persistentVolumeClaimRetentionPolicy: {}
-#  whenDelted: "Delete"
+#  whenDeleted: "Delete"
 #  whenScaled: "Retain"
 
 clusterRole:
