Feature fluentbit standalone (#87)
* test fluentbit daemonset

* charts/fluent: gcp decrease pvc to 1Gi

* charts/fluent: gcp use collector

* charts/fluent: gcp configure ephemeral requests

* charts/chart_deps/app: secret tpl

* changelog: update

* charts/chart_deps/app/core: deployment tpl

* charts/chart_deps/app/core: deployment image tpl

* deps

* chart_deps/app/common: fix initContainers

* charts/chart_deps/app/core: statefulset

* chart_deps/app/core: common podTemplate

* enable deployments

* charts/fluent: use common chart for fluentbit-gcp

* charts/fluent: global repo + tag

* charts/fluent: use secret

* chart_deps/app/core: use name for volumeClaimTemplate

* charts/fluent: change config name

* chart_deps/fluent/fluentbit/fluentbit: non operated chart

* chart_deps/fluent/fluentbit/fluentbit -> chart_deps/fluent/fluentbit/fluentbit-standalone

* chart_deps/app/core: fix role label issue

* charts/fluent: dependency update

* chart_deps/fluent/fluentbit/fluentbit-standalone: fix pvc issue

* chard_deps/app/core: set securitContext to {} if not set

* changelog: update

* charts/fluent: disable fluent by default

* chart_deps/app/core: podTemplate set securitContext to {} if not set for container

* chart_desp/app/common: fix typo

--- a/charts/chart_deps/app/common/values.yaml
+++ b/charts/chart_deps/app/common/values.yaml
@@ -18,6 +18,15 @@ nameOverride: ""
 fullnameOverride: ""
 
 deploymentEnabled: true
+statefulsetEnabled: false
+
+volumeClaimTemplates: {}
+
+volumes: {}
+volumeMounts: {}
+persistentVolumeClaimRetentionPolicy: {}
+#  whenDeleted: "Delete"
+#  whenScaled: "Retain"
 
 clusterRole:
   enabled: false
