--- a/charts/chart_deps/app/common/templates/deployment.yaml
+++ b/charts/chart_deps/app/common/templates/deployment.yaml
@@ -4,11 +4,11 @@
 {{- $app_tolerations := ternary .Values.tolerations .Values.global.tolerations ( hasKey .Values "tolerations") }}
 {{- $app_affinity := ternary .Values.affinity .Values.global.affinity ( hasKey .Values "affinity") }}
 {{- $labels := include "common.labels" $ | fromYaml }}
-{{- $deployment := .Values }}
+{{- $deployment := mustDeepCopy .Values }}
 {{- $deployment = set $deployment "initContainers" (include "common.initContainers" . | fromYaml).initContainers }}
 {{- $deployment = set $deployment "enabled" .Values.deploymentEnabled }}
 {{- $deployment = set $deployment "name" (include "common.fullname" . ) }}
-{{- $deployment = set $deployment "selectorLabels" (include "common.selectorLabels" . ) }}
+{{- $deployment = set $deployment "selectorLabels" (include "common.selectorLabels" . | fromYaml ) }}
 {{- $deployment = set $deployment "imagePullPolicy" .Values.image.pullPolicy }}
 {{- $deployment = set $deployment "image" (printf "%s:%s" $app_image_repo $app_image_tag )}}
 {{- $deployment = set $deployment "nodeSelector" $app_nodeSelector }}
