--- a/charts/chart_deps/fluent/fluentbit/fluentbit-operated/values.yaml
+++ b/charts/chart_deps/fluent/fluentbit/fluentbit-operated/values.yaml
@@ -302,10 +302,12 @@ config:
 fluentbit:
   enabled: false
   fluentBitConfigName: '{{ include "fluentbit-operated.fullname" . }}'
+  image: 'ghcr.io/fluent/fluent-operator/fluent-bit:4.0.9'
 
 collector:
   enabled: false
   fluentBitConfigName: '{{ include "fluentbit-operated.fullname" . }}'
+  image: 'ghcr.io/fluent/fluent-operator/fluent-bit:4.0.9'
 
 
 pvs: {}
