--- a/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/values.yaml
+++ b/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/values.yaml
@@ -1,15 +1,18 @@
 nameOverride: ""
 fullnameOverride: ""
-statefulsetEnabled: true
 
 configs:
   http_server: true
-  parsers_file: /fluent-bit/etc/parsers.conf
+  parsers_file: /fluent-bit/etc/parsers.yaml
 
 secrets:
   config:
     data:
-      parsers.conf: ""
+      parsers.yaml: |
+        {{- range $name, $parser := .Values.parsers }}
+        parsers:
+        - {{ toYaml $parser | nindent 2 | trim }}
+        {{- end }}
       parsers_multiline.conf: ""
       fluent-bit.yaml: |
         {{- with .Values.configs }}
@@ -21,6 +24,10 @@ secrets:
           inputs:
           - {{ toYaml $input | nindent 4 | trim }}
           {{- end }}
+          {{- range $filter := .Values.filters }}
+          filters:
+          - {{ toYaml $filter | nindent 4 | trim }}
+          {{- end }}
           {{- range $name, $output := .Values.outputs }}
           outputs:
           - {{ toYaml $output | nindent 4 | trim }}
@@ -28,10 +35,12 @@ secrets:
 
 
 fluentbit:
+  enabled: false
+  statefulsetEnabled: true
   replicaCount: 1
   revisionHistoryLimit: 2
 
-  image: 'ghcr.io/fluent/fluent-operator/fluent-bit:latest'
+  image: 'ghcr.io/fluent/fluent-operator/fluent-bit:4.0.9-debug'
 
   imagePullPolicy: IfNotPresent
 
