--- a/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/values.yaml
+++ b/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/values.yaml
@@ -3,18 +3,16 @@ fullnameOverride: ""
 
 configs:
   http_server: true
-  parsers_file: /fluent-bit/etc/parsers.yaml
+  parsers_file: /fluent-bit/etc/parsers.conf
 
 secrets:
   config:
     data:
-      parsers.yaml: |
+      fluent-bit.yaml: |
         {{- range $name, $parser := .Values.parsers }}
         parsers:
         - {{ toYaml $parser | nindent 2 | trim }}
         {{- end }}
-      parsers_multiline.conf: ""
-      fluent-bit.yaml: |
         {{- with .Values.configs }}
         service:
         {{- tpl (toYaml . ) $ | nindent 2 }}
