--- a/charts/postgres/Chart.yaml
+++ b/charts/postgres/Chart.yaml
@@ -18,3 +18,6 @@ dependencies:
     repository: file://../chart_deps/app/common/
     alias: pgadmin
     condition: pgadmin.enabled
+  - name: core
+    version: 0.1.0
+    repository: file://../../../app/core
