chart_deps/fluent/fluentbit/fluentbit-standalone: mount secret by default

--- a/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/templates/fluentbit.yaml
+++ b/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/templates/fluentbit.yaml
@@ -1,5 +1,5 @@
 {{- $labels := include "fluentbit.labels" $ | fromYaml }}
-{{- $fluentbit := .Values.fluentbit }}
+{{- $fluentbit := mustDeepCopy .Values.fluentbit }}
 
 {{- if $fluentbit.enabled }}
 {{- $serviceAccount := $fluentbit.serviceAccount }}
@@ -18,6 +18,8 @@
 {{- $fluentbit = set $fluentbit "selectorLabels" $service.selectorLabels }}
 {{- $fluentbit = set $fluentbit "serviceAccountName" $serviceAccount.name }}
 {{- $fluentbit = set $fluentbit "containerName" .Chart.Name  }}
+{{- $fluentbit = set $fluentbit "volumes" (include "fluentbit.volumes" . | fromYaml ).volumes  }}
+{{- $fluentbit = set $fluentbit "volumeMounts" (include "fluentbit.volumeMounts" . | fromYaml ).volumeMounts  }}
 
 {{- range $name, $pvc := $fluentbit.pvcs }}
 {{- $pvc = set $pvc "name" ( printf "%s-%s" (include "fluentbit.fullname" $ )  $name ) }}
