--- a/charts/environments/values.yaml
+++ b/charts/environments/values.yaml
@@ -31,6 +31,8 @@ defaultValuesTpl: |
       server: {{ .env.server }}
       short_name: {{ .env.short_name }}
     alerts: {{ .Values.global.alerts | toYaml | nindent 4 }}
+    cloud: {{ .cloud | toYaml | nindent 4 }}
+
 
   repository:
     url: {{ .Values.repository.url }}
