--- a/charts/fluent/values.yaml
+++ b/charts/fluent/values.yaml
@@ -308,12 +308,12 @@ fluentbit:
           - list
 
 fluentbit-gcp:
-  enabled: true
+  enabled: false
   inputs:
     control-plane:
       name: tail
       tag: kube.control-plane.*
-      path: "/var/log/k8s/container.googleapis.com/*/*/*/*/00:00*"
+      path: "/var/log/k8s/container.googleapis.com/*/*/*/*/03:00*"
       read_from_head: true
       mem_buf_limit: 300MB
       skip_long_lines: true
@@ -324,7 +324,7 @@ fluentbit-gcp:
     audit:
       name: tail
       tag: kube.audit.*
-      path: "/var/log/k8s/cloudaudit.googleapis.com/*/*/*/*/00:00*"
+      path: "/var/log/k8s/cloudaudit.googleapis.com/*/*/*/*/*"
       read_from_head: true
       mem_buf_limit: 300MB
       skip_empty_lines: true
@@ -375,7 +375,7 @@ fluentbit-gcp:
         method_name: $protoPayload['methodName']
         job: 'fluentbit-k8s-audit'
         level: $level
-      remove_keys: insertId,logName,operation,receiveTimestamp,resource,response['metadata']['managedFields']
+      remove_keys: insertId,logName,operation,receiveTimestamp,resource,response['metadata']['managedFields'],response['spec']['metadata']['managedFields']
 
   parsers:
     json:
