--- a/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/values.yaml
+++ b/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/values.yaml
@@ -50,7 +50,7 @@ fluentbit:
   replicaCount: 1
   revisionHistoryLimit: 2
 
-  image: 'ghcr.io/fluent/fluent-operator/fluent-bit:4.1.1'
+  image: 'ghcr.io/fluent/fluent-operator/fluent-bit:4.1.1-debug'
 
   imagePullPolicy: IfNotPresent
 
